docs: added code section in documentation

--- a/README
+++ b/README
@@ -62,3 +62,17 @@ destroy it with `bloom_destroy`. To register a value, use
 `bloom_check`. See the function definitions for more information.
 
 Check some examples at the end of the header
+
+
+Code
+----
+
+The official git repository of bloom-filter.h is hosted at:
+
+    https://github.com/San7o/bloom-filter.h
+
+This is part of a bigger collection of header-only C99 libraries
+called "micro-headers", contributions are welcome:
+
+    https://github.com/San7o/micro-headers
+
